# dataGeneration

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/blackbox_matcher/: configCameraAction.h  configCameraActionFeedback.h  configCameraActionGoal.h  configCameraActionResult.h  configCameraFeedback.h  configCameraGoal.h  configCameraResult.h
devel/include/matcher/: configMatchAction.h  configMatchActionFeedback.h  configMatchActionGoal.h  configMatchActionResult.h  configMatchFeedback.h  configMatchGoal.h  configMatchResult.h  saveMatchesAction.h  saveMatchesActionFeedback.h  saveMatchesActionGoal.h  saveMatchesActionResult.h  saveMatchesFeedback.h  saveMatchesGoal.h  saveMatchesResult.h
devel/include/motion_estimation/: configMotionEstimationAction.h  configMotionEstimationActionFeedback.h  configMotionEstimationActionGoal.h  configMotionEstimationActionResult.h  configMotionEstimationFeedback.h  configMotionEstimationGoal.h  configMotionEstimationResult.h
devel/include/shared_files/: FrameEstimate.h  MatchFrame.h  MatchingPoints.h  PixelMatch.h  PointEstimate.h  PointSet.h  RelativeFrame.h  RelativePoint.h  SettingsTransform.h  TopicNames.h  TransformNames.h
devel/include/simulator/: configSimulationAction.h  configSimulationActionFeedback.h  configSimulationActionGoal.h  configSimulationActionResult.h  configSimulationFeedback.h  configSimulationGoal.h  configSimulationResult.h  genDataAction.h  genDataActionFeedback.h  genDataActionGoal.h  genDataActionResult.h  genDataFeedback.h  genDataGoal.h  genDataResult.h  newSimulationAction.h  newSimulationActionFeedback.h  newSimulationActionGoal.h  newSimulationActionResult.h  newSimulationFeedback.h  newSimulationGoal.h  newSimulationResult.h
devel/lib/blackbox_matcher/: blackbox_node
devel/lib/matcher/: blackbox_node
devel/lib/menu/: menu_node
devel/lib/motion_estimation/: estimation_node
devel/lib/pkgconfig/: blackbox_matcher.pc  matcher.pc  menu.pc  motion_estimation.pc  sequence_manager.pc  shared_files.pc  simulator.pc  te.pc
devel/lib/sequence_manager/: sequence_node
devel/lib/shared_files/: config_node
devel/lib/simulator/: sim_node
devel/lib/te/: T_node
src/blackbox_matcher/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/blackbox_matcher/action/: camera_config.action~  configCamera.action  configCamera.action~
src/blackbox_matcher/include/blackbox_matcher/: Matcher.h
src/blackbox_matcher/src/: Matcher.cpp  node.cpp
src/matcher/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/matcher/action/: configCamera.action~  configMatch.action~  saveMatches.action  simulate_point.action~
src/matcher/src/: DataPoint.cpp  Frame.cpp  Matcher.cpp  node.cpp
src/menu/: CMakeLists.txt  package.xml~
src/menu/launch/: simple.launch  simple.launch~
src/menu/src/: Manager.cpp  node.cpp
src/motion_estimation/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/motion_estimation/action/: cameraConfig.action~  configMotionEstimation.action~  configTriangulation.action~  mapConfig.action~
src/motion_estimation/src/: Estimator.cpp  node.cpp
src/sequence_manager/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/sequence_manager/src/: Sequence.cpp  (+1 more)
src/shared_files/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/simulator/: CMakeLists.txt  CMakeLists.txt~  package.xml~
src/te/: CMakeLists.txt  CMakeLists.txt~  package.xml
testing/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
testing/src/: node.cpp
(+287 files in other folders)
