<?xml version="1.0"?>
<package>
  <name>blackbox_matcher</name>
  <version>0.0.0</version>
  <description>The black box matcher package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ryan@todo.todo">ryan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/stereo_camera</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

<!-- External Libraries 
__________________________________________-->
  <build_depend>Boost</build_depend>
	<build_depend>OpenCV</build_depend>
	<build_depend>shared_files</build_depend>
	<build_depend>motion_estimation</build_depend>

	<run_depend>shared_files</run_depend>
  <run_depend>Boost</run_depend>
	<run_depend>OpenCV</run_depend>
	<run_depend>motion_estimation</run_depend>
<!-- Action Libraries and Messages 
_________________________________    -->
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
	<build_depend>message_runtime</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
	<run_depend>message_generation</run_depend>
<!-- MEssages -->
  <build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

<!-- ROS STANDARD LIBRARIES
______________________________________-->
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>


<!-- TRANSFORM LIBRARIES
_________________________________-->

  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
	<build_depend>tf</build_depend>

  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
	<run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
